--- a/packages/poosh-plugin-header-location-from-html/package.json
+++ b/packages/poosh-plugin-header-location-from-html/package.json
@@ -12,7 +12,9 @@
   "author": "Merlicco Yves",
   "license": "MIT",
   "main": "lib/index.js",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "cheerio": "^0.20.0"
   }
