--- a/packages/poosh-common/package.json
+++ b/packages/poosh-common/package.json
@@ -9,7 +9,9 @@
   "author": "Merlicco Yves",
   "license": "MIT",
   "main": "lib/index.js",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "lodash": "^4.7.0",
     "ms": "^0.7.1"
