--- a/packages/poosh-plugin-s3/package.json
+++ b/packages/poosh-plugin-s3/package.json
@@ -15,7 +15,9 @@
   "author": "Merlicco Yves",
   "license": "MIT",
   "main": "lib/index.js",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "aws-sdk": "^2.3.0",
     "bluebird": "^3.3.4",
