fix(npm): Fix selection of NPM files to be published

--- a/packages/eslint-config-poosh/package.json
+++ b/packages/eslint-config-poosh/package.json
@@ -8,10 +8,5 @@
     "eslint"
   ],
   "author": "Merlicco Yves",
-  "license": "MIT",
-  "files": [
-    "base.json5",
-    "node.json5",
-    "mocha.json5"
-  ]
+  "license": "MIT"
 }
