--- a/packages/poosh-cli/package.json
+++ b/packages/poosh-cli/package.json
@@ -17,6 +17,7 @@
     "poosh": "./bin/poosh.js"
   },
   "dependencies": {
+    "babel-polyfill": "^6.7.4",
     "bluebird": "^3.3.4",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
@@ -24,8 +25,8 @@
     "lodash": "^4.7.0",
     "log-update": "^1.0.2",
     "loud-rejection": "^1.3.0",
-    "pretty-bytes": "^3.0.1",
-    "poosh-common": "1.0.0",
-    "poosh-core": "1.0.0"
+    "poosh-common": "^1.0.1",
+    "poosh-core": "^1.0.2",
+    "pretty-bytes": "^3.0.1"
   }
 }
