--- a/packages/poosh-core/package.json
+++ b/packages/poosh-core/package.json
@@ -13,12 +13,14 @@
     "bluebird": "^3.3.4",
     "crc": "^3.4.0",
     "findup-sync": "^0.4.0",
+    "glob": "^7.0.3",
     "joi": "^8.0.5",
+    "json5": "^0.5.0",
     "lodash": "^4.7.0",
     "micromatch": "^2.3.7",
     "mime": "^1.3.4",
     "ms": "^0.7.1",
     "nedb": "^1.8.0",
-    "poosh-common": "1.0.0"
+    "poosh-common": "^1.0.1"
   }
 }
