--- a/packages/poosh-plugin-s3/package.json
+++ b/packages/poosh-plugin-s3/package.json
@@ -20,6 +20,6 @@
     "bluebird": "^3.3.4",
     "joi": "^8.0.5",
     "lodash": "^4.7.0",
-    "poosh-common": "1.0.0"
+    "poosh-common": "^1.0.1"
   }
 }
