--- a/packages/poosh-plugin-header-location-from-html/package.json
+++ b/packages/poosh-plugin-header-location-from-html/package.json
@@ -11,6 +11,10 @@
   ],
   "author": "Merlicco Yves",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/yvele/poosh/issues"
+  },
+  "homepage": "https://github.com/yvele/poosh",
   "main": "lib/index.js",
   "dependencies": {
     "cheerio": "^0.20.0"
