--- a/packages/poosh-plugin-s3/package.json
+++ b/packages/poosh-plugin-s3/package.json
@@ -14,6 +14,10 @@
   ],
   "author": "Merlicco Yves",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/yvele/poosh/issues"
+  },
+  "homepage": "https://github.com/yvele/poosh",
   "main": "lib/index.js",
   "dependencies": {
     "aws-sdk": "^2.3.4",
