--- a/packages/eslint-config-poosh/base.json5
+++ b/packages/eslint-config-poosh/base.json5
@@ -217,7 +217,9 @@
 
     // ECMAScript 6
     "arrow-spacing": [2, { before: true, after: true }],
-    "generator-star-spacing": [2, "after"],
+    //"generator-star-spacing": [2, "after"],
+    //https://github.com/babel/babel-eslint/issues/316
+    "generator-star-spacing": 0,
     "no-class-assign": 2,
     "no-confusing-arrow": 2,
     "no-const-assign": 2,
