chore(ci): Temporarily disable code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ install:
 
 script:
   - npm run style
-  - npm run coverage
+  - npm run test
+#  - npm run coverage
 
-after_success:
-  - codecov
+#after_success:
+#  - codecov
