chore(ci): Fix babel-plugin-rewire version to 1.0.0-rc-4 as rc-5 has breaking changes

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ install:
 
 script:
   - npm run style
-  - npm run test
-#  - npm run coverage
+  - npm run coverage
 
-#after_success:
-#  - codecov
+after_success:
+  - codecov
