--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "babel-cli": "^6.11.4",
     "babel-eslint": "^6.1.2",
     "babel-plugin-flow-comments": "^6.3.19",
-    "babel-plugin-rewire": "^1.0.0-rc-5",
+    "babel-plugin-rewire": "1.0.0-rc-4",
     "babel-plugin-transform-builtin-extend": "^1.1.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
