--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "validate": "npm run style && npm run test"
   },
   "devDependencies": {
-    "babel-cli": "^6.11.4",
-    "babel-eslint": "^6.1.2",
+    "babel-cli": "^6.16.0",
+    "babel-eslint": "^7.0.0",
     "babel-plugin-flow-comments": "^6.3.19",
     "babel-plugin-rewire": "1.0.0-rc-4",
     "babel-plugin-transform-builtin-extend": "^1.1.0",
@@ -35,7 +35,7 @@
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-flow-vars": "^0.5.0",
     "istanbul": "^1.0.0-alpha.2",
-    "lerna": "^1.1.3",
+    "lerna": "2.0.0-beta.28",
     "mocha": "^3.0.2",
     "should": "^11.0.0",
     "sinon": "^1.17.5"
