--- a/.babelrc
+++ b/.babelrc
@@ -3,10 +3,5 @@
     "flow-comments",
     ["transform-builtin-extend", { "globals": ["Error"] }]
   ],
-  "presets": ["es2015", "stage-0"],
-  "env": {
-    "test": {
-      "plugins": ["rewire"]
-    }
-  }
+  "presets": ["es2015", "stage-0"]
 }
