--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "babel-eslint": "^7.0.0",
     "babel-plugin-flow-comments": "^6.3.19",
     "babel-plugin-transform-builtin-extend": "^1.1.0",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-latest": "^6.16.0",
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^3.2.2",
     "eslint-config-poosh": "^1.0.8",
