chore(test): Remove sinon package

--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "lerna": "2.0.0-beta.28",
     "mocha": "^3.0.2",
     "rewire": "^2.5.2",
-    "should": "^11.0.0",
-    "sinon": "^1.17.5"
+    "should": "^11.0.0"
   }
 }
