chore: Update dependencies

--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,8 @@
     "flow-comments",
     ["transform-builtin-extend", { "globals": ["Error"] }]
   ],
-  "presets": ["latest", "stage-0"]
+  "presets": ["latest", "stage-0"],
+  "env": {
+    "nyc": { "plugins": ["istanbul"] }
+  }
 }
