--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "scripts": {
     "bootstrap": "npm install && lerna bootstrap",
     "bootstrap:yarn": "yarn && lerna bootstrap",
-    "build": "./scripts/build.sh sourceonly",
-    "build:sourcemaps": "./scripts/build.sh sourcemaps",
+    "build": "./scripts/build.sh",
     "clean": "npm run clean:build && npm run clean:test && npm run clean:npm",
     "clean:build": "./scripts/clean-build.sh",
     "clean:npm": "./scripts/clean-npm.sh",
@@ -43,8 +42,9 @@
     "babel-plugin-flow-comments": "^6.3.19",
     "babel-plugin-istanbul": "^3.1.2",
     "babel-plugin-transform-builtin-extend": "^1.1.0",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-plugin-transform-function-bind": "^6.22.0",
+    "babel-preset-env": "^1.1.8",
     "babel-register": "^6.22.0",
     "eslint": "^3.14.0",
     "eslint-config-poosh": "^1.0.8",
