--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "validate": "npm run style && npm run test"
   },
   "engines": {
-    "node": ">=4.3.2",
+    "node": ">=v5.12.0",
     "npm": ">=v4.1.1"
   },
   "devDependencies": {
