--- a/packages/poosh-plugin-header-location-from-html/package.json
+++ b/packages/poosh-plugin-header-location-from-html/package.json
@@ -2,19 +2,22 @@
   "name": "poosh-plugin-header-location-from-html",
   "version": "1.1.0",
   "description": "Poosh plugin that generates location HTTP headers from HTML content",
-  "repository": "https://github.com/yvele/poosh/tree/master/packages/poosh-plugin-header-location-from-html",
-  "keywords": [
-    "poosh",
-    "poosh-plugin",
-    "header",
-    "headers"
-  ],
   "author": "Merlicco Yves",
-  "license": "MIT",
+  "keywords": [
+    "poosh"
+  ],
+  "homepage": "https://github.com/yvele/poosh/tree/master/packages/poosh-plugin-header-location-from-html",
   "bugs": {
     "url": "https://github.com/yvele/poosh/issues"
   },
-  "homepage": "https://github.com/yvele/poosh",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yvele/poosh"
+  },
+  "files": [
+    "lib/"
+  ],
   "main": "lib/index.js",
   "dependencies": {
     "cheerio": "^0.22.0"
