--- a/packages/poosh-plugin-s3/package.json
+++ b/packages/poosh-plugin-s3/package.json
@@ -2,22 +2,22 @@
   "name": "poosh-plugin-s3",
   "version": "1.2.0",
   "description": "Poosh plugin that publishes files to AWS S3",
-  "repository": "https://github.com/yvele/poosh/tree/master/packages/poosh-plugin-s3",
-  "keywords": [
-    "poosh",
-    "poosh-plugin",
-    "s3",
-    "aws",
-    "publish",
-    "publisher",
-    "sync"
-  ],
   "author": "Merlicco Yves",
-  "license": "MIT",
+  "keywords": [
+    "poosh"
+  ],
+  "homepage": "https://github.com/yvele/poosh/tree/master/packages/poosh-plugin-s3",
   "bugs": {
     "url": "https://github.com/yvele/poosh/issues"
   },
-  "homepage": "https://github.com/yvele/poosh",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yvele/poosh"
+  },
+  "files": [
+    "lib/"
+  ],
   "main": "lib/index.js",
   "dependencies": {
     "aws-sdk": "^2.7.27",
