--- a/packages/poosh-cli/package.json
+++ b/packages/poosh-cli/package.json
@@ -27,6 +27,9 @@
   "bin": {
     "poosh": "./bin/poosh.js"
   },
+  "engines": {
+    "node": ">=v5.12.0"
+  },
   "dependencies": {
     "babel-polyfill": "^6.22.0",
     "bluebird": "^3.4.7",
