--- a/packages/poosh-plugin-header-location-from-html/package.json
+++ b/packages/poosh-plugin-header-location-from-html/package.json
@@ -19,6 +19,9 @@
     "lib/"
   ],
   "main": "lib/index.js",
+  "engines": {
+    "node": ">=v5.12.0"
+  },
   "dependencies": {
     "cheerio": "^0.22.0"
   }
