--- a/packages/poosh-plugin-s3/package.json
+++ b/packages/poosh-plugin-s3/package.json
@@ -19,6 +19,9 @@
     "lib/"
   ],
   "main": "lib/index.js",
+  "engines": {
+    "node": ">=v5.12.0"
+  },
   "dependencies": {
     "aws-sdk": "^2.7.27",
     "bluebird": "^3.4.7",
